--- a/EventManagement/appsettings.json
+++ b/EventManagement/appsettings.json
@@ -4,12 +4,12 @@
     "Issuer": "MyApplication",
     "Audience": "MyAudience"
   },
-  //"ConnectionStrings": {
-  //  "AppDatabase": "Server=(localdb)\\MSSQLLocalDB;Database=EventManagement;Trusted_Connection=True;TrustServerCertificate=True"
-  //},
   "ConnectionStrings": {
-    "AppDatabase": "Host=aws-1-ap-south-1.pooler.supabase.com;Port=6543;Database=postgres;Username=postgres.cllsesmkiqwmnejwjjxe;Password=cU3RT31bxRVRwAjt;SSL Mode=Require;Trust Server Certificate=true;"
+    "AppDatabase": "Server=(localdb)\\MSSQLLocalDB;Database=EventManagement;Trusted_Connection=True;TrustServerCertificate=True"
   },
+  //"ConnectionStrings": {
+  //  "AppDatabase": "Host=aws-1-ap-south-1.pooler.supabase.com;Port=6543;Database=postgres;Username=postgres.cllsesmkiqwmnejwjjxe;Password=cU3RT31bxRVRwAjt;SSL Mode=Require;Trust Server Certificate=true;"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
